Add missing commas.

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,10 +1,10 @@
 @article{
-    author = "J Lerond"
-    title = "Algorithmically Generated Chiller Performance Curves for Building Energy Simulation"
-    journal = "ASHRAE transactions"
-    year = 2019
-    volume = 125
-    number = 2
+    author = "J Lerond",
+    title = "Algorithmically Generated Chiller Performance Curves for Building Energy Simulation",
+    journal = "ASHRAE transactions",
+    year = 2019,
+    volume = 125,
+    number = 2,
     pages = 93
 }
 
