Add missing comma.

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,4 +1,4 @@
-@article{ashrae_conf_paper
+@article{ashrae_conf_paper,
     author = "J Lerond",
     title = "Algorithmically Generated Chiller Performance Curves for Building Energy Simulation",
     journal = "ASHRAE transactions",
