Misc changes to refs.

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,31 +1,31 @@
 @standard {ahri_550590,
-    title={"550/590 (I-P/2020): Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle"},
-    organization={"AHRI"},
-    institution ={"AHRI"},
-    address={"Arlington, VA"},
-    year={"2020"}
+    title={550/590 (I-P/2020): Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle},
+    organization={AHRI},
+    institution ={AHRI},
+    address={Arlington, VA},
+    year={2020}
 }
 
 @standard {ahri_551591,
-    title={"551/591 (SI/2020): Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle"},
-    organization={"AHRI"},
-    institution ={"AHRI"},
-    address={"Arlington, VA"},
-    year={"2020"}
+    title={551/591 (SI/2020): Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle},
+    organization={AHRI},
+    institution ={AHRI},
+    address={Arlington, VA},
+    year={2020}
 }
 
 @standard {90.1,
-    title={"ANSI/ASHRAE/IES 90.1-2019, Energy Standard for Buildings Except Low-Rise Residential Buildings"},
-    organization={"ASHRAE"},
-    institution={"ASHRAE"},
-    address={"Atlanta, GA"},
-    year={"2019"}
+    title={ANSI/ASHRAE/IES 90.1-2019, Energy Standard for Buildings Except Low-Rise Residential Buildings},
+    organization={ASHRAE},
+    institution={ASHRAE},
+    address={Atlanta, GA},
+    year={2019}
 }
 
 @article{ashrae_conf_paper,
-    author={"J Lerond"},
-    title={"Algorithmically Generated Chiller Performance Curves for Building Energy Simulation"},
-    journal={"ASHRAE transactions"},
+    author={J Lerond},
+    title={Algorithmically Generated Chiller Performance Curves for Building Energy Simulation},
+    journal={ASHRAE transactions},
     year={2019},
     volume={125},
     number={2},
@@ -33,10 +33,10 @@
 }
 
 @misc{comnet,
-    title={"COMNET, Appendix H - Equipment Performance Curves"},
-    author={"COMNET"},
-    howpublished={"\url{https://comnet.org/}"},
-    note={"Accessed: 2022-09-22"}
+    title={COMNET, Appendix H - Equipment Performance Curves},
+    author={COMNET},
+    howpublished={\url{https://comnet.org/}},
+    note={Accessed: 2022-09-22}
 }
 
 @misc{osti_1395882,
@@ -55,15 +55,15 @@
 }
 
 @misc{addendumbd,
-    author={"ASHRAE"},
-    title={"Addendum bd to Standard 90.1-2019, Energy Standard for Buildings Except Low-Rise Residential Buildings"},
-    institution={"ASHRAE"},
+    author={ASHRAE},
+    title={Addendum bd to Standard 90.1-2019, Energy Standard for Buildings Except Low-Rise Residential Buildings},
+    institution={ASHRAE},
     year={"2022"}
 }
 
 @misc{tspr,
-    title={"TSPR Washington State Analysis Tool"},
-    author={" Pacific Northwest National Laboratory"},
-    howpublished={"\url{https://energycode.pnl.gov/HVACSystemPerformance/}"},
-    note={"Accessed: 2022-09-22"}
+    title={TSPR Washington State Analysis Tool"},
+    author={ Pacific Northwest National Laboratory},
+    howpublished={\url{https://energycode.pnl.gov/HVACSystemPerformance/}},
+    note={Accessed: 2022-09-22}
 }
