Misc changes to refs.

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,5 +1,5 @@
 @standard {ahri_550590,
-    title={550/590 (I-P/2020): Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle},
+    title={550/590 Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle},
     organization={AHRI},
     institution ={AHRI},
     address={Arlington, VA},
@@ -7,7 +7,7 @@
 }
 
 @standard {ahri_551591,
-    title={551/591 (SI/2020): Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle},
+    title={551/591 Performance Rating of Water-chilling and Heat Pump Water-heating Packages Using the Vapor Compression Cycle},
     organization={AHRI},
     institution ={AHRI},
     address={Arlington, VA},
@@ -58,12 +58,12 @@
     author={ASHRAE},
     title={Addendum bd to Standard 90.1-2019, Energy Standard for Buildings Except Low-Rise Residential Buildings},
     institution={ASHRAE},
-    year={"2022"}
+    year={2022}
 }
 
 @misc{tspr,
-    title={TSPR Washington State Analysis Tool"},
-    author={ Pacific Northwest National Laboratory},
+    title={TSPR Washington State Analysis Tool},
+    author={PNNL},
     howpublished={\url{https://energycode.pnl.gov/HVACSystemPerformance/}},
     note={Accessed: 2022-09-22}
 }
